# gen-analytics

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/agents/gen_analytics/: __init__.py  agent.py
backend/app/: config.py  main.py
backend/app/agent/: agent.py  callbacks.py  context_loader.py  prompts.py
backend/app/agent/tools/: execute_sql.py  get_sample_data.py  suggest_viz.py  validate_sql.py
backend/app/api/routes/: audit.py  saved_queries.py
backend/app/bigquery/: client.py  metadata.py  safety.py
backend/app/db/: database.py  models.py
backend/app/schema/: enrichments.py  examples.py  formatter.py  glossary.py
backend/data/: schema_cache.txt  schema_metadata.json
backend/scripts/: evaluate.py  extract_schema.py  measure_prompt.py  test_agent.py  test_bq_connection.py  test_execute_sql.py  test_gemini.py
backend/tests/eval/: complex_queries.yaml  medium_queries.yaml  simple_queries.yaml
backend/tests/eval/results/: eval_20260319_130032.jsonl
data/examples/: query_examples.yaml
data/glossary/: business_terms.yaml
data/metadata/: table_enrichments.yaml
docs/: PRD.md  TECH_SPEC.md  demo_questions.md  phase-1.md  phase-10.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
frontend/react-app/: .gitignore  index.html  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/react-app/e2e/: adk-sse-real.spec.ts  (+2 more)
frontend/streamlit_app/: app.py
frontend/web/: index.html  package.json  vite.config.ts
(+46 files in other folders)
